BJS2-27008 - use Entity in services instead of EntityDto